cloud-infra-macros/tests/fails/missing_lambda_prefix.rs
use cloud_infra_macros::lambda_permission_action;

fn example() {
    lambda_permission_action!("some:stuff");
}

fn main() {}